[gd_scene load_steps=2 format=3 uid="uid://shop001"]

[ext_resource type="Script" path="res://scripts/ui/shop_scene.gd" id="1_shop"]

[node name="ShopScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_shop")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -90.0
offset_right = 150.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SHOP"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Gold: 50"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="ResultLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1

[node name="LeaveBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "LEAVE SHOP"
